# Spam-Intelligence-Studio

./: .gitignore  LICENSE  README.md  messageSpamFiltering.py  pyproject.toml  requirements.txt
artifacts/classical/: complement_nb.joblib  cross_channel_holdout.csv  false_negatives.csv  false_positives.csv  linear_svc.joblib  logistic_regression.joblib  random_forest.joblib  test_metrics.csv  top_linear_features.json  training_manifest.json  validation_metrics.csv
artifacts/transformer/: transformer_metrics.json
artifacts/transformer/model/: config.json  model.safetensors
notebooks/: spam_intelligence_report.ipynb
src/spam_intelligence/: __init__.py  __main__.py  data.py  evaluation.py  features.py  models.py  predict.py  transformer.py
tests/: test_data_validation.py  test_notebook_contract.py  test_preprocessing.py  test_training_smoke.py
